# is_prime

./: CMakeLists.txt  LICENSE  README.md  main.c
